# yali_noam

./: .gitignore  Date.cpp  README.md
HW2/: .cproject  .project  BoogieLever.cpp  BoogieLever.hpp  CMakeLists.txt  Cleric.cpp  Cleric.h  Clerk.cpp  Clerk.hpp  Date.cpp  Date.h  Delivery.cpp  Delivery.h  Edge.cpp  Edge.h  EdgeCargo.cpp  EdgeCargo.h  EdgeTime.cpp  EdgeTime.h  Graph.cpp  Graph.hpp  GraphPorts.cpp  GraphPorts.h  Main.cpp  Makefile  Port.cpp  Port.h  args  cmake_install.cmake  input  input1.txt
HW2/Debug/: Date.d  Delivery.d  Main.d  makefile  subdir.mk
HW3/: .cproject  .project  CMakeCache.txt  CMakeLists.txt  Controller.cpp  Controller.h  CruiseShip.cpp  CruiseShip.h  Cruise_Ship.h  Cruiser.cpp  Cruiser.h  Cruiser_commands.h  Freighter.cpp  Freighter.h  Freighter_commands.cpp  Freighter_commands.h  Main.cpp  Makefile  Map_Cell.cpp  Map_Cell.h  MarineElement.h  Model.h  PirateShip.cpp  PirateShip.h  Port.h  Scouter.h  SevenSeas.cpp  Ship.cpp  Ship.h  Ships_commands.h  Shipyard.h  Tester.cpp  View.h  cmake_install.cmake  link_errs.txt  readme.txt  ships_commands.cpp  yali_input.txt
HW3/Elements/: Civil_ship.cpp  Civil_ship.h  Cruise_Ship.cpp  Cruise_Ship.h  Cruiser.cpp  Cruiser.h  Freighter.cpp  Freighter.h  MarineElement.cpp  MarineElement.h  Port.cpp  Port.h  SevenSeas.h  Ship.cpp  Ship.h  Shipyard.cpp  Shipyard.h
HW3/IO/: readme.txt  yali_input.txt
HW3/MVC/: Controller.cpp  Controller.h  Model.cpp  Model.h  View.cpp  View.h
HW3/Utilities/: BadInputException.cpp  BadInputException.h  CivilShipsCommands.cpp  CivilShipsCommands.h  CommandFactory.cpp  CommandFactory.h  CommandInfo.cpp  CommandInfo.h  Cruiser_commands.cpp  Cruiser_commands.h  Freighter_commands.h  Geometry.h  Scouter.cpp  Scouter.h  Ships_commands.h
HW_2/: Date.cpp  Date.h  Delivery.cpp
cpp/HW_2/: Date.cpp  Date.h  Delivery.cpp  Delivery.h
cpp/hw2/: hw2.pro
fast_networks/hw1/Project1/: Project1.sln
fast_networks/hw1/hw1/: dn_protocol.cpp  dn_protocol.h  ip_file_handler.h  main.cpp
fast_networks/hw3/: .cproject  .project  Main.cpp  Matrix.cpp  Matrix.h
project/: .~lock.presentation.pptx#  Main.py  Observation.py  clustering.py  cmeans.mat.csv  data_generator.py  datasets_test.py  fuzzy_c_means.py  kMeans  k_means.py  kmeans.py  kmeans_iris.py  kmeans_new.py  needed_packages.txt  presentation.pptx  project report.docx  statistical_gap.py  statistical_gap_threaded.py  uniform_cloud.py  utils.py  view.py
y2/advanced_cpp/HW3/: CMakeLists.txt  Main.cpp  makefile  testCMD.txt
y2/advanced_cpp/HW3/Elements/: Civil_ship.h  Cruiser.h  Freighter.h  MarineElement.cpp  Ship.cpp  Shipyard.cpp
y2/advanced_cpp/HW3/MVC/: Model.cpp  Model.h
y2/advanced_cpp/HW3/Utilities/: BadInputException.cpp  CommandFactory.cpp  Cruiser_commands.h  Geometry.cpp  Scouter.cpp  Scouter.h  Ships_commands.h
(+5186 files in other folders)
